# Autonomous-Balloon

./: README.md  SPBallonfull.slx  hinfcontrol.m
Balloon/: Coreless DC Motor.SLDPRT  balloon.SLDPRT  balloonassemble.SLDASM  holdingnew.SLDPRT  propeller.SLDPRT  stand.SLDPRT  sticknewbase.SLDPRT
BalloonGazebo/smcpomdpballoon/: CMakeLists.txt  package.xml
BalloonGazebo/smcpomdpballoon/launch/: model.launch.py
BalloonGazebo/smcpomdpballoon/src/: altitudeholding.cpp  smcpomdpballoonplugin.cc  stationkeeping.cpp
BalloonGazebo/smcpomdpballoon/urdf/: smcpomdpballoon.urdf.xacro
BalloonMatlab/: SPballoonASMC.slx  SPballoonASMCPOMDPfull.slx
Balloonexperiment/esp8266server/: CMakeLists.txt  package.xml
Balloonexperiment/esp8266server/src/: server.cpp
Balloonexperiment/pomdpballoonesp8266/: pomdpballoonesp8266.ino
